# auto-agent-eval

./: .gitignore  README.md  README.zh.md  SPEC.md  pyproject.toml
agents/: claude-code-opus.yaml  claude-code.yaml  copilot.yaml  kiro.yaml  mock-smart.yaml  mock.yaml
scripts/: smart_mock.py
src/agent_eval/: __init__.py  agents.py  cli.py  environment.py  loader.py  metrics.py  models.py  runner.py  server.py
tasks/csv-stats/: eval.yaml  task.yaml
tasks/csv-stats/workspace/: stats.py  test_data.csv  test_stats.py
tasks/debug/: eval.yaml  task.yaml
tasks/debug/workspace/: cart.py  test_cart.py
tasks/django-11099/: eval.yaml  task.yaml
tasks/django-11099/workspace/: test_url.py  validators.py
tasks/git-conflict/: eval.yaml  task.yaml
tasks/git-conflict/workspace/: auth.py  test_auth.py
tasks/order-service/: eval.yaml  task.yaml
tasks/order-service/workspace/: REQUIREMENTS.md
tasks/refactor/: eval.yaml  task.yaml
tasks/refactor/workspace/: processor.py  test_processor.py
tasks/sales-report/: eval.yaml  task.yaml
tasks/sales-report/workspace/: sales_data.csv
tasks/sql-bug/: eval.yaml  task.yaml
tasks/sql-bug/workspace/: queries.sql  test_queries.py
tasks/wordfreq/: eval.yaml  task.yaml
tasks/wordfreq/workspace/: sample.txt
tasks/write-tests/: eval.yaml  task.yaml
tasks/write-tests/workspace/: textutils.py
web/: index.html
web/src/: App.tsx  api.ts  style.css  types.ts  utils.ts
web/src/components/: RunList.tsx  RunView.tsx  ScoreBar.tsx  Sidebar.tsx  TaskView.tsx
