[project]
name = "agent-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Clawd", email = "fffff.c@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
agent-eval = "agent_eval.cli:main"

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"
